--- a/public/css/postJob.css
+++ b/public/css/postJob.css
@@ -258,9 +258,10 @@ a.full_a
     position: relative;
     top: 70px;
 
+    overflow: hidden;
+
     min-height: 1300px;
     padding: 50px 0;
-    overflow: hidden;
 
     border-radius: 3px;
     background-color: #eee;
@@ -269,10 +270,11 @@ a.full_a
 {
     z-index: 1;
 
+    overflow: hidden;
+
     width: 1400px;
     min-height: 1200px;
     margin: 0 auto;
-    overflow: hidden;
     padding-bottom: 50px;
 
     background-color: #fff;
@@ -513,8 +515,9 @@ textarea.job_description:focus
 /*main_company_controll_moduel*/
 .main_company_controll
 {
-    min-height: 1200px;
     overflow: hidden;
+
+    min-height: 1200px;
 }
 .main_compnay_left_banner
 {
@@ -1383,6 +1386,12 @@ span.numofpeople
 
     color: rgba(0,0,0,.7);
 }
+.resume_content
+{
+    padding-left: 20px;
+
+    border-left: 1px solid #245655;
+}
 .resume_base,
 .resume_skill,
 .resume_selfdes
@@ -1422,6 +1431,33 @@ span.numofpeople
     width: 40px;
     height: 40px;
     margin-right: 10px;
+}
+.resume_timetittle
+{
+    font-size: 20px;
+    font-weight: 500;
+
+    position: relative;
+    top: -10px;
+    left: -23px;
+
+    margin-bottom: 20px;
+    padding-left: 25px;
+
+    color: #254665;
+}
+.resume_round
+{
+    position: absolute;
+    top: 8px;
+    left: -2px;
+
+    width: 10px;
+    height: 10px;
+
+    border: 2px solid #ccc;
+    border-radius: 50%;
+    background-color: #245655;
 }
 .resume_avatar
 {
@@ -1518,25 +1554,30 @@ span.numofpeople
 }
 .admin_resume_nav
 {
-    width: 100%;
-    color: #fff;
-    letter-spacing: 2px;
     font-size: 24px;
-    line-height: 50px;text-align: center;
+    line-height: 50px;
+
+    width: 100%;
     height: 50px;
-    background-color: rgba(22,22,22,1);
     margin-bottom: 50px;
+
+    text-align: center;
+    letter-spacing: 2px;
+
+    color: #fff;
+    background-color: rgba(22,22,22,1);
 }
 
 .admin_resume_thumb
 {
-    margin-top: 30px;
     float: left;
     overflow: hidden;
+
+    box-sizing: content-box;
     width: 800px;
-margin-bottom: 50px;
-box-sizing: content-box;
     height: 190px;
+    margin-top: 30px;
+    margin-bottom: 50px;
 
     border-radius: 2px;
 }
@@ -1546,7 +1587,6 @@ box-sizing: content-box;
 
     width: 180px;
     height: 190px;
-
 }
 .resume_avatar_thumb
 {
@@ -1586,6 +1626,7 @@ box-sizing: content-box;
     height: 50px;
     margin: 10px 0;
     padding-left: 20px;
+
     color: #254665;
 }
 .resume_base_thumb img
@@ -1619,9 +1660,10 @@ box-sizing: content-box;
 }
 .action_button_banner
 {
+    float: right;
+
     width: 120px;
     height: 100%;
-    float: right;
 }
 
 .resumes_modeul
