--- a/public/css/postJob.css
+++ b/public/css/postJob.css
@@ -1668,9 +1668,9 @@ span.numofpeople
 
 .jobs_modeul
 {
-    margin-bottom: 50px;
+    padding-bottom: 50px;
 }
 .resumes_modeul
 {
-    margin-bottom: 50px;
+    padding-bottom: 50px;
 }
