--- a/public/css/user.css
+++ b/public/css/user.css
@@ -1262,7 +1262,6 @@ input.search_input:focus
     position: relative;
 
     float: left;
-    overflow: hidden;
 
     width: 20%;
     height: 285px;
@@ -1275,6 +1274,20 @@ input.search_input:focus
 {
     width: 100%;
     height: 285px;
+}
+.resume_user_pic_tip
+{
+    line-height: 30px;
+
+    position: absolute;
+    bottom: -40px;
+
+    width: 100%;
+    height: 30px;
+
+    text-align: center;
+
+    border-bottom: 1px solid rgba(0,0,0,.1);
 }
 
 
@@ -1530,6 +1543,10 @@ p.p_company_info
     height: 50px;
     padding-left: 90px;
 }
+p.p_company_info a
+{
+    color: rgba(0,146,210,1);
+}
 .job_recommend_banner_tan
 {
     position: absolute;
@@ -1683,6 +1700,10 @@ p.p_company_info
     padding-left: 20px;
 
     border-left: 1px solid #245655;
+}
+.resume_content a
+{
+    color: rgba(0,146,210,1);
 }
 .resume_base,
 .resume_skill,
@@ -2008,6 +2029,8 @@ button.edit_user_info:hover
 /*question*/
 .question_modeul
 {
+    overflow: hidden;
+
     width: 100%;
     min-height: 800px;
     padding: 50px;
@@ -2058,6 +2081,10 @@ button.edit_user_info:hover
 
 
 /*question_show*/
+.question_item a
+{
+    color: rgba(0,0,0,.7);
+}
 .question_item_nav
 {
     position: relative;
@@ -2072,6 +2099,31 @@ button.edit_user_info:hover
 
     width: 100%;
     height: 40px;
+}
+.question_create a
+{
+    display: inline-block;
+
+    width: 100%;
+    height: 100%;
+}
+.question_create
+{
+    line-height: 40px;
+
+    float: right;
+
+    width: 150px;
+    height: 40px;
+
+    text-align: center;
+
+    border-radius: 5px;
+    background-color: rgba(0,146,210,1);
+}
+.question_create:hover
+{
+    opacity: .9;
 }
 .question_item_nav_list > li
 {
@@ -2198,18 +2250,136 @@ button.edit_user_info:hover
     line-height: 50px;
 
     float: right;
-    text-align: right;
+    overflow: hidden;
 
     width: 220px;
     height: 50px;
 
+    text-align: right;
+
     color: rgba(0,0,0,.7);
-    overflow: hidden;
 }
 
 
+/*question_show*/
+.editor_banner
+{
+    float: left;
 
+    width: 70%;
+    margin-top: 50px;
+}
+.question_banner
+{
+    float: left;
 
+    width: 70%;
+}
+.question_publisher_info_banner
+{
+    float: right;
+
+    width: 20%;
+    height: 400px;
+
+    border-radius: 3px;
+    background-color: rgba(0,0,0,.05);
+}
+.question_comment_banner
+{
+    float: left;
+    overflow: hidden;
+
+    width: 70%;
+    min-height: 300px;
+}
+.question_comment_item_banner
+{
+    overflow: hidden;
+    padding-bottom: 40px;
+    border-bottom: 1px solid rgba(0,0,0,.1);
+}
+.question_comment_item
+{
+    float: left;
+    float: right;
+
+    width: 85%;
+    padding-left: 20px;
+
+    color: rgba(0,0,0,.7);
+}
+.question_comment_item_banner img
+{
+    float: left;
+
+border-radius: 50%;
+border: 5px solid rgba(0,0,0,.1);
+    width: 100px;
+    height: 100px;
+}
+.question_line
+{
+    line-height: 40px;
+
+    position: relative;
+
+    float: left;
+
+    width: 70%;
+    height: 40px;
+    margin: 50px 0;
+
+    color: rgba(0,0,0,.7);
+    border-bottom: 1px solid rgba(0,0,0,.1);
+}
+.question_line_tittle
+{
+    position: absolute;
+    top: 20px;
+    left: 50px;
+
+    padding: 0 20px;
+
+    background-color: #fff;
+}
+.question_show_tittle
+{
+    font-size: 24px;
+    line-height: 50px;
+
+    width: 100%;
+    height: 50px;
+
+    color: rgba(0,0,0,.7);
+}
+.question_show_info
+{
+    font-size: 10px;
+    line-height: 20px;
+
+    width: 100%;
+    height: 30px;
+
+    color: rgba(0,0,0,.7);
+}
+.question_show_tittle,
+.question_show_info
+{
+    padding-left: 30px;
+
+    border-left: 3px solid rgba(0,0,0,.5);
+}
+.question_show_body
+{
+    width: 100%;
+    min-height: 300px;
+    margin-top: 20px;
+    padding-top: 30px;
+
+    color: rgba(0,0,0,.7);
+    border-top: 1px solid rgba(0,0,0,.1);
+}
 
 
 
