--- a/public/css/user.css
+++ b/public/css/user.css
@@ -2277,13 +2277,33 @@ button.edit_user_info:hover
 }
 .question_publisher_info_banner
 {
+
+    position: relative;
+    top: 50px;
     float: right;
 
+color: rgba(0,0,0,.7);
     width: 20%;
     height: 400px;
 
     border-radius: 3px;
-    background-color: rgba(0,0,0,.05);
+}
+.question_publisher_info_banner img
+{
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: 3px solid rgba(0,0,0,.1);
+    margin: 0 auto;
+    display: block;
+}
+.question_publisher_name
+{
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    overflow: hidden;
+    text-align: center;
 }
 .question_comment_banner
 {
@@ -2295,9 +2315,19 @@ button.edit_user_info:hover
 }
 .question_comment_item_banner
 {
+    padding-top: 30px;
     overflow: hidden;
+
     padding-bottom: 40px;
+
     border-bottom: 1px solid rgba(0,0,0,.1);
+}
+.button_banner
+{
+    float: left;
+
+    width: 100%;
+    height: 50px;
 }
 .question_comment_item
 {
@@ -2313,10 +2343,11 @@ button.edit_user_info:hover
 {
     float: left;
 
-border-radius: 50%;
-border: 5px solid rgba(0,0,0,.1);
     width: 100px;
     height: 100px;
+
+    border: 5px solid rgba(0,0,0,.1);
+    border-radius: 50%;
 }
 .question_line
 {
@@ -2379,6 +2410,23 @@ border: 5px solid rgba(0,0,0,.1);
 
     color: rgba(0,0,0,.7);
     border-top: 1px solid rgba(0,0,0,.1);
+}
+.return_login
+{
+    line-height: 40px;
+
+    float: left;
+
+    width: 200px;
+    height: 50px;
+    cursor: pointer;
+
+    text-align: center;
+
+    color: rgba(241,241,241,1);
+    border: 1px solid rgba(0,146,210,1);
+    border-radius: 5px;
+    background-color: rgba(0,146,210,1);
 }
 
 
